Fixed spacing of footer

--- a/css/bootstrap-cosmo.no-icons.css
+++ b/css/bootstrap-cosmo.no-icons.css
@@ -5174,15 +5174,14 @@ a.thumbnail:hover {
   font-size: 14px;
   margin-top: 8px;
   border-top: 1px solid #e5e5e5;
+  padding-top: 8px;
 }
 .footer i {
-  font-size: 28px;
-  
+  font-size: 24px;
 }
 .footer a {
   color: #000000;
-  float: right;
-  margin-left: 8px;
+  margin-right: 8px;
 }
 .footer a:hover {
   color: #bbbbbb;
